# mastercard-creathon-back-rust

./: .dockerignore  .gitignore  ANALYSIS.md  CONTEXT_AND_SESSIONS.md  Cargo.toml  Dockerfile  FRONTEND_INTEGRATION.md  INTEGRATION.md  INTEGRATION_GUIDE.md  LLM_IMPLEMENTATION.md  QUICK_TEST.md  README.md  SECURITY.md  SETUP.md  TELEGRAM_INTEGRATION.md  USAGE.md  docker-compose.db-only.yml  docker-compose.host-ollama.yml  docker-compose.ollama.yml  docker-compose.yml  test_api.py  test_api.sh  test_queries.sh
examples/: analysis_example.sh  chat_example.sh  format_response_example.json  react_component.tsx  telegram_bot.py
migrations/: 001_init.sql
readmes/: CHAT_API.md  DOCKER_SETUP.md  FRONTEND_INTEGRATION.md  LOCAL_SETUP.md  OLLAMA_FEATURES.md  OUTPUT_FORMATS.md  PRODUCTION_DEPLOY.md  QUERY_LIMITS.md  QUICK_START_DOCKER.md  TABLES_AND_FORMATTING.md  TESTING.md  USAGE.md
scripts/: README.md  add_more_transactions.sh  create_database.sql  insert_test_data.sql  setup_database.sh  setup_ollama_in_docker.sh  test_api.sh  test_charts.sh  test_jailbreak.sh  test_jailbreak_detailed.sh
src/: config.rs  error.rs  main.rs  state.rs
src/analysis/: client.rs  insights.rs  mod.rs
src/api/: context.rs  health.rs  mod.rs  models.rs  query.rs
src/cache/: memory.rs  mod.rs
src/chat/: handler.rs  mod.rs  session.rs
src/db/: mock_data.rs  mod.rs  pool.rs  queries.rs
src/llm/: client.rs  mod.rs  prompts.rs  validator.rs
src/query_context/: manager.rs  mod.rs
src/utils/: formatters.rs  language.rs  logger.rs  metrics.rs  mod.rs  question_classifier.rs  user_safety.rs
